# vkr-program

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
lib/: CMakeLists.txt
lib/chunk_impl/: CMakeLists.txt  bson.cpp  bson.h  chunk.h  columnar.cpp  columnar.h  common.cpp  common.h  escape.cpp  escape.h  get_stream.cpp  get_stream.h  io.cpp  io.h  json.cpp  json.h  prefix_tree.h
lib/chunk_impl/dremel/: CMakeLists.txt  assembly.cpp  assembly.h  field_descriptor.cpp  field_descriptor.h  field_reader.cpp  field_reader.h  field_writer.cpp  field_writer.h
lib/document/: CMakeLists.txt  document.cpp  document.h
research/: .gitignore  experiments.ipynb  generator.py  graphics.ipynb  read_results.json  read_results_mmap.json  read_results_without_mmap.json  results.json  runner.py  write_results.json
